# CMakeCrossTest

./: .gitignore  Align.cpp  Align.h  CMakeLists.txt  CMakeSettings.json  ChunkAllocator.h  Debug.cpp  Debug.h  Exception.cpp  Exception.h  LinearAllocator.cpp  LinearAllocator.h  Memory.h  ObjectStorage.h  README.md  RegionAllocator.cpp  RegionAllocator.h  TestStorage.cpp  TestStorage.h  build_32_debug.bat  build_32_debug.sh  build_32_release.bat  build_32_release.sh  build_64_debug.bat  build_64_debug.sh  build_64_release.bat  build_64_release.sh  build_all.bat  build_all.sh  main.cpp
Collections/: Array.h  Base.h  Chunks.h  Consts.h  DlList.h  Holder.h  Nodes.h  Pool.h  Queue.h  SlList.h  Stack.h
Posix/: ChunkAllocator.cpp  Memory.cpp  Utils.cpp  Utils.h
Test/: TestFile.cpp  TestFile.h  TestSTLinearAllocator.cpp  TestSTLinearAllocator.h
Win/: ChunkAllocator.cpp  Memory.cpp  Utils.cpp  Utils.h
